# AutomatedProving

./: CMakeLists.txt  README.md
lib/and/: and.cpp  and.h
lib/axiom/axiom_scheme/: axiom_scheme.cpp  axiom_scheme.h
lib/expression/: expression.h
lib/expression_cast/: expression_cast.h
lib/expression_factory/: expression_factory.h
lib/expressions/conjunction/: conjunction.cpp  conjunction.h
lib/expressions/disjunction/: disjunction.cpp  disjunction.h
lib/expressions/equivalence/: equivalence.cpp  equivalence.h
lib/expressions/exclusive_or/: exclusive_or.cpp  exclusive_or.h
lib/expressions/expression/: expression.h
lib/expressions/expression_cast/: expression_cast.h
lib/expressions/expression_factory/: expression_factory.h
lib/expressions/implication/: implication.cpp  implication.h
lib/expressions/negation/: negation.cpp  negation.h
lib/expressions/variable/: variable.cpp  variable.h
lib/implication/: implication.cpp  implication.h
lib/inference_rules/disjunctive_syllogism/: disjunctive_syllogism.cpp  disjunctive_syllogism.h
lib/inference_rules/hypothetic_syllogism/: hypothetic_syllogism.cpp  hypothetic_syllogism.h
lib/inference_rules/inference_conclusion/: inference_conclusion.h
lib/inference_rules/inference_rule/: inference_rule.cpp  inference_rule.h
lib/inference_rules/modus_ponens/: modus_ponens.cpp  modus_ponens.h
lib/inference_rules/modus_tollens/: modus_tollens.cpp  modus_tollens.h
lib/inference_rules/separation_syllogism/: separation_syllogism.cpp  separation_syllogism.h
lib/negation/: negation.cpp  negation.h
lib/or/: or.cpp  or.h
lib/parser/: parser.cpp  parser.h
lib/proof/deduction/: deduction.cpp  deduction.h
lib/proof/proof_context/: proof_context.cpp  proof_context.h
lib/proof/proof_engine/: proof_engine.cpp  proof_engine.h
lib/proof/proof_logger/: log_entity.h  proof_logger.cpp  proof_logger.h
lib/proof_engine/: proof_engine.cpp  proof_engine.h
lib/substitution/: substitution_context.cpp  substitution_context.h
lib/variable/: variable.cpp  variable.h
lib/xor/: xor.cpp  xor.h
src/: main.cpp
src/proof_engine/: proof_engine.cpp  proof_engine.h
